# FIT

./: .gitignore  .gitmodules  CMakeLists.txt
BMS_1/: BTSData.cpp  BTSData.h  BTSLoadData.cpp  BTSLoadData.h  CMakeLists.txt  Coordinates.cpp  Coordinates.h  CustomException.cpp  CustomException.h  Distance.cpp  Distance.h  Makefile  UTM.h  it_is_ok.sh  main.cpp  mainTestBTSData.cpp  mainTestGPS.cpp  mainTestHata.cpp
BMS_2/: CMakeLists.txt  Common.cpp  Common.h  CustomException.cpp  CustomException.h  Demodulator.cpp  Demodulator.h  Makefile  Modulator.cpp  Modulator.h  bms2A  bms2A.cpp  bms2B  bms2B.cpp  it_is_ok.sh  sine.waw
BMS_2/dir_txt/: test22
BMS_2/input/: .gitignore
FLP_1/: Makefile  README  it_is_ok.sh  run_tests.sh  simplify-bkg.hs
FLP_2/: Makefile  README  cube.pl
HSC/fpga/src_filter/: directives.tcl  filter.cpp
HSC/mcu/: main_sw.c  main_swhw.c
IAL_1/: c201.c  c203.c  c206.c
IAL_2/: c016.c  c401.c  c402.c
ICP/: README.md
IIS/: README.md
IMP/: Makefile  project.xml
IMP/doc/: index.rst
IMP/doc/img/: Thumbs.db
IMP/mcu/: main.c
IMS/: README.md
INC/: fsm.vhd
IOS_1/: wedi
IOS_2/: Makefile  h2o.c
IPK_1/: Makefile  webclient.cpp
IPK_2/: Makefile  README  client.cpp  common.cpp  common.h  server.cpp  soubor2.txt  test.sh
IPK_2/CLIENT/: soubor1.txt
IPP_1/: cls.php
IPP_2/: csv.py
ISA/: Converter.cpp  Converter.h  Makefile  PcapReader.cpp  PcapReader.h  ProcessParams.cpp  ProcessParams.h  README  analyzer.cpp  global.h
ITY_1/: Makefile  proj1.tex
ITY_2/: Makefile  proj2.tex
ITY_3/: Makefile  proj3.tex
ITY_4/: Makefile  proj4.tex  proj4_literatura.bib
ITY_5/: Makefile  panda.eps  proj5.tex
IZG/: student.c  student.h
KKO/: .gitignore  CMakeLists.txt  Makefile  gif2bmp.c  gif2bmp.h  main.c
KKO/dir_log/: .gitignore
KRY_1/: solution.py  solution_sat.py
KRY_1/xnecas24/: bis.txt.enc  hint.gif.enc  super_cipher.py.enc
KRY_2/: Makefile  ecc.py
PDS/: ClientMessage.h  Common.h  ServerMessage.h  Util.h  pds-dhcprogue.cpp  pds-dhcpstarve.cpp  readme
PRL_1/: mss.cpp  test.sh
PRL_2/: pro.cpp  test.sh
